# self_host_runner

./: .gitignore  README.md
.build/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.in
.build/context/: .env.runner_x.sample  .env.sample  docker-compose.yml  run.sh  runner_cron.sh
.build/context/.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
